tests/baselines/reference/superCallParameterContextualTyping1.errors.txt
tests/cases/conformance/expressions/contextualTyping/superCallParameterContextualTyping1.ts(9,21): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A<T1, T2>'.


==== tests/cases/conformance/expressions/contextualTyping/superCallParameterContextualTyping1.ts (1 errors) ====
    class A<T1, T2> {
        constructor(private map: (value: T1) => T2) {
    
        }
    }
    
    class B extends A<number, string> {
        // Ensure 'value' is of type 'number (and not '{}') by using its 'toExponential()' method.
        constructor() { super(value => String(value.toExponential())); }
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A<T1, T2>'.
    }
    